# election-forecasting-am215

./: .coverage  .gitignore  .pypirc.template  .readthedocs.yaml  CLAUDE.md  CONCURRENCY.md  Dockerfile  Makefile  README.md  coverage.xml  election_forecast.prof  model_comparison.csv  mypy.ini  pipeline.prof  pyproject.toml  pytest.ini  test.py
.github/workflows/: ci.yml  publish.yml
data/: DATA_SOURCES.md
docs/source/: api.rst  conf.py  development.rst  installation.rst  models.rst  quickstart.rst
election_forecasting/models/: base_model.py  hierarchical_bayes.py  improved_kalman.py  kalman_diffusion.py  poll_average.py
election_forecasting/scripts/: compare_models.py  generate_plots.py  run_all.py  run_all_models.py
election_forecasting/utils/: data_utils.py
metrics/: calibration_summary.csv  hierarchical_bayes.txt  improved_kalman.txt  kalman_diffusion.txt  poll_average.txt
predictions/: hierarchical_bayes.csv  improved_kalman.csv  kalman_diffusion.csv  poll_average.csv
src/: _version.py
src/diagnostics/: horizon.py
src/models/: base_model.py  hierarchical_bayes.py  kalman_diffusion.py  poll_average.py
src/scripts/: compare_models.py  generate_plots.py  per_state_calibration.py  per_state_calibration_plots.py  run_all.py  run_all_models.py
src/utils/: calibration.py  data_utils.py  logging_config.py
tests/: conftest.py  test_base_model.py  test_calibration.py  test_data_utils.py  test_models.py  test_regression.py  test_smoke_models.py
