[project]
name = "election-forecasting"
version = "0.1.0"
description = "State-level presidential election forecasting models"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "rich>=14.2.0",
]

[project.scripts]
election-forecast = "election_forecasting.scripts.run_all_models:main"
election-compare = "election_forecasting.scripts.compare_models:main"
election-plot = "election_forecasting.scripts.generate_plots:main"
election-run-all = "election_forecasting.scripts.run_all:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["election_forecasting"]

[tool.uv]
dev-dependencies = []
