[project]
name = "election-forecasting"
version = "0.1.0"
description = "State-level presidential election forecasting models"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["election", "forecasting", "polling", "kalman-filter", "bayesian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "rich>=14.2.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/election-forecasting"
Repository = "https://github.com/yourusername/election-forecasting"
Documentation = "https://election-forecasting.readthedocs.io"
Issues = "https://github.com/yourusername/election-forecasting/issues"

[project.scripts]
election-forecast = "election_forecasting.scripts.run_all_models:main"
election-compare = "election_forecasting.scripts.compare_models:main"
election-plot = "election_forecasting.scripts.generate_plots:main"
election-run-all = "election_forecasting.scripts.run_all:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["election_forecasting"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.82.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "twine>=5.0.0",
    "build>=1.0.0",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.pytest_cache",
    "/.ruff_cache",
    "/htmlcov",
    "/.coverage",
    "/coverage.xml",
    "/predictions",
    "/metrics",
    "/plots",
    "*.prof",
]
